[gd_scene load_steps=12 format=2]

[ext_resource path="res://TabScreens/GalaxyMap/GalaxyRenderer/EDGalaxyParticles.tscn" type="PackedScene" id=1]
[ext_resource path="res://TabScreens/GalaxyMap/GalaxyRenderer/GalaxyRenderer.tscn" type="PackedScene" id=2]
[ext_resource path="res://TabScreens/GalaxyMap/GalaxyRes/GalaxyStar.tres" type="SphereMesh" id=3]
[ext_resource path="res://TabScreens/GalaxyMap/GalaxyRenderer/GalaxyCenter.gd" type="Script" id=4]
[ext_resource path="res://TabScreens/GalaxyMap/GalaxyRes/galaxygrid.material" type="Material" id=5]
[ext_resource path="res://TabScreens/GalaxyMap/GalaxyRenderer/GalaxyPlane.tscn" type="PackedScene" id=6]
[ext_resource path="res://TabScreens/GalaxyMap/GalaxyRes/PlaneGrid.tres" type="PlaneMesh" id=7]

[sub_resource type="MultiMesh" id=1]
color_format = 2
transform_format = 1
mesh = ExtResource( 3 )

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
flags_use_point_size = true
vertex_color_use_as_albedo = true

[sub_resource type="PointMesh" id=3]
material = SubResource( 2 )

[sub_resource type="MultiMesh" id=4]
color_format = 2
transform_format = 1
mesh = SubResource( 3 )

[node name="GalaxyCenter" type="Spatial"]
script = ExtResource( 4 )

[node name="StarsMultiMesh" type="MultiMeshInstance" parent="."]
multimesh = SubResource( 1 )

[node name="EDSMMultiMesh" type="MultiMeshInstance" parent="."]
multimesh = SubResource( 4 )

[node name="PlaneGrid" type="MeshInstance" parent="."]

[node name="CameraCenter" type="Spatial" parent="PlaneGrid"]

[node name="CameraGrid" type="MeshInstance" parent="PlaneGrid/CameraCenter"]
mesh = ExtResource( 7 )
material/0 = ExtResource( 5 )

[node name="CameraRotation" type="Spatial" parent="PlaneGrid/CameraCenter"]
transform = Transform( -1, -4.37114e-08, 7.57104e-08, 0, 0.866026, 0.5, -8.74228e-08, 0.5, -0.866026, 0, 0, 0 )

[node name="Camera" type="Camera" parent="PlaneGrid/CameraCenter/CameraRotation"]
transform = Transform( 1, 0, 0, 0, 1, -2.98023e-07, 0, 2.98023e-08, 1, 0, 0, 120000 )
fov = 30.0
far = 200000.0

[node name="GalaxyPlane" parent="." instance=ExtResource( 6 )]

[node name="GalaxyParticles" parent="." instance=ExtResource( 1 )]
transform = Transform( -9315, 0, -0.000814343, 0, 9315, 0, 0.000814343, 0, -9315, 25.219, -20.906, 25900 )

[node name="TweenZoom" type="Tween" parent="."]

[node name="TweenPos" type="Tween" parent="."]

[node name="TweenPlane" type="Tween" parent="."]

[node name="TweenFade" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="GalaxyRenderer" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
